--- a/index.html
+++ b/index.html
@@ -431,19 +431,19 @@
           <div class="row">
             <div class="col-xl-4 col-lg-4 col-sm-4">
               <div class="perform">
-                <span class="counter title-head num">28</span>
+                <span class="counter num">28</span>
                 <span class="sub-title">Years of Exprience</span>              
               </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-sm-4">
               <div class="perform">
-                <span class="counter title-head num">40</span>
+                <span class="counter num">40</span>
                 <span class="sub-title">Commercial Building</span>              
               </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-sm-4">
               <div class="perform">
-                <span class="counter title-head num">106</span>
+                <span class="counter num">106</span>
                 <span class="sub-title">Dwelling Houses Built</span>              
               </div>
             </div>
