--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Yantramanav:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
   </head> 
   <body>
     <!--------heroHeader-section----------->
@@ -284,16 +284,24 @@
       <div class="container container-new">
         <div class="row">
           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-            <div class="row">
-              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="image">
-                    <img src="image/Jpg/serv1.jpg" alt="">
-                </div>
+            <div class="service-slide">
+              <div class="image">
+                  <img src="image/Jpg/serv1.jpg" alt="">
               </div>
-              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="image"> 
-                    <img src="image/Jpg/serv2.jpg" alt="">
-                </div>
+              <div class="image"> 
+                  <img src="image/Jpg/serv2.jpg" alt="">
+              </div>
+              <div class="image">
+                  <img src="image/Jpg/serv3.jpg" alt="">
+              </div>
+              <div class="image"> 
+                  <img src="image/Jpg/serv4.jpg" alt="">
+              </div>
+              <div class="image">
+                  <img src="image/Jpg/serv5.jpg" alt="">
+              </div>
+              <div class="image"> 
+                  <img src="image/Jpg/serv6.jpg" alt="">
               </div>
             </div>
           </div>
