--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Yantramanav:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/style.css"> 
   </head> 
   <body>
     <!--------heroHeader-section----------->
@@ -270,8 +269,8 @@
               <div class="container container-new flex-box hero-center-2">
                   <div class="hero-content">
                     <h1 class="hero-light">Machinery</h1>
-                    <h2 class="hero-head">Assembly Line</h2>
-                    <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, alias ex. Soluta ipsam est consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptate.</p>
+                    <h2 class="heading para-white">Assembly Line</h2>
+                    <p class="para para-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, alias ex. Soluta ipsam est consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptate.</p>
                     <a href="#" class="btn all-btn">Read more</a>
                   </div>
               </div>
@@ -306,9 +305,9 @@
             </div>
           </div>
           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-            <div class="content">
+            <div class="section-header">
               <span class="title-head">our service</span>
-              <h2 class="hero-head">Services We Offered</h2>
+              <h2 class="heading">Services We Offered</h2>
               <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsa laborum praesentium quia? Veniam rerum dolor dolore aspernatur tempora nobis laudantium minima animi explicabo nam.</p>
               <a href="#" class="btn all-btn">more services</a>
             </div>
@@ -322,9 +321,9 @@
       <div class="container container-new">
         <div class="row">
           <div class="col-xl-6 col-lg-6">
-            <div class="content">
+            <div class="section-header">
               <span class="title-head">why choose us</span>
-              <h2 class="hero-head">Through Years We Offer best Service & Solutions</h2>
+              <h2 class="heading">Through Years We Offer best Service & Solutions</h2>
             </div>
           </div>
           <div class="col-xl-6 col-lg-6">
@@ -368,6 +367,24 @@
     </section>
     <!----------project-section------>
     <section class="section project-section">
+      <div class="container container-new">
+        <div class="row align-items-center">
+          <div class="col-xl-10">
+            <div class="section-header">
+              <span class="title-head">our portfolio</span>
+              <h2 class="heading">Ongoing Project</h2>
+            </div>
+          </div>
+          <div class="col-xl-2">
+            <div class="btn-box">
+              <a href="#" class="btn btn-black">
+                <i class="fas mr-1 fa-arrow-right"></i>
+                more service
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row mx-0">
         <div class="col-xl-3 px-0 col-lg-3 col-md-6 col-sm-6 col-12">
           <div class="project-group">
@@ -430,23 +447,25 @@
           </div>
         </div>
         <div class="container container-new">
-          <div class="row">
-            <div class="col-xl-4 col-lg-4 col-sm-4">
-              <div class="perform">
-                <span class="counter num">28</span>
-                <span class="sub-title">Years of Exprience</span>              
+          <div id="numCounter">  
+            <div class="row">
+              <div class="col-xl-4 col-lg-4 col-sm-4">
+                <div class="perform">
+                  <span class="counter num" data-count="28">0</span>
+                  <span class="sub-title">Years of Exprience</span>              
+                </div>
               </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-sm-4">
-              <div class="perform">
-                <span class="counter num">40</span>
-                <span class="sub-title">Commercial Building</span>              
+              <div class="col-xl-4 col-lg-4 col-sm-4">
+                <div class="perform">
+                  <span class="counter num" data-count="40">0</span>
+                  <span class="sub-title">Commercial Building</span>              
+                </div>
               </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-sm-4">
-              <div class="perform">
-                <span class="counter num">106</span>
-                <span class="sub-title">Dwelling Houses Built</span>              
+              <div class="col-xl-4 col-lg-4 col-sm-4">
+                <div class="perform">
+                  <span class="counter num" data-count="106">0</span>
+                  <span class="sub-title">Dwelling Houses Built</span>              
+                </div>
               </div>
             </div>
           </div>
@@ -460,7 +479,7 @@
       <div class="container container-new">
         <div class="content">
           <span class="title-head">our Experts</span>
-          <h2 class="hero-head">Meet Our Team</h2>
+          <h2 class="heading">Meet Our Team</h2>
           <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum commodi nisi ipsum. Rem, reprehenderit assumenda Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolores.</p>
         </div>
         <div class="row">
@@ -527,7 +546,7 @@
           <div class="col-xl-4 col-lg-4">
             <div class="content">
               <span class="title-head">Our testimonial</span>
-              <h2 class="hero-head">We're Serving Because of You</h2>
+              <h2 class="heading">We're Serving Because of You</h2>
             </div>
           </div>
           <div class="col-xl-8 col-lg-8">
@@ -666,7 +685,7 @@
         </div>
         <div class="content">
           <div class="span title-head">got a project</div>
-          <h2 class="hero-head">Ready to Simplify Your Next Contruction Porject with Us?</h2>
+          <h2 class="heading para-white">Ready to Simplify Your Next Contruction Porject with Us?</h2>
           <a href="#" class="btn all-btn">
             <i class="fas fa-envelope"></i>
             <span>contact us</span>
@@ -681,7 +700,7 @@
           <div class="col-xl-3 col-lg-3 col-md-12">
             <div class="content">
               <span class="title-head">news & artiles</span>  
-              <h2 class="hero-head">Construction Blogs</h2>
+              <h2 class="heading">Construction Blogs</h2>
             </div>
           </div>
           <div class="col-xl-9 col-lg-9 col-md-12">
@@ -850,8 +869,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js" integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="jquery.counterup.min.js"></script>
     <script src="js/script.js"></script>
   </body> 
 </html>
