--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
           </div>
           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-            <div class="section-header">
+            <div class="section-header-md section-header">
               <span class="title-head">our service</span>
               <h2 class="heading">Services We Offered</h2>
               <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsa laborum praesentium quia? Veniam rerum dolor dolore aspernatur tempora nobis laudantium minima animi explicabo nam.</p>
@@ -321,14 +321,15 @@
       <div class="container container-new">
         <div class="row">
           <div class="col-xl-6 col-lg-6">
-            <div class="section-header">
+            <div class="section-header-lg section-header section-header-md">
               <span class="title-head">why choose us</span>
               <h2 class="heading">Through Years We Offer best Service & Solutions</h2>
+              <p class="para d-lg-none d-xl-none d-md-block">we Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, ad! Id laboriosam minima unde? Adipisci, natus voluptatem. Aperiam, quidem aliquid Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut ullam distinctio beatae tenetur aperiam cum.</p>
             </div>
           </div>
           <div class="col-xl-6 col-lg-6">
             <div class="content">
-              <p class="para">we Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, ad! Id laboriosam minima unde? Adipisci, natus voluptatem. Aperiam, quidem aliquid Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut ullam distinctio beatae tenetur aperiam cum.</p>
+              <p class="para d-none d-md-none d-lg-block d-xl-block d-sm-none">we Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, ad! Id laboriosam minima unde? Adipisci, natus voluptatem. Aperiam, quidem aliquid Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut ullam distinctio beatae tenetur aperiam cum.</p>
             </div>
           </div>
         </div>
@@ -337,28 +338,28 @@
             <div class="benefits">
               <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M340.8,83C307,83,276,98.8,256,124.8c-20-26-51-41.8-84.8-41.8C112.1,83,64,131.3,64,190.7c0,27.9,10.6,54.4,29.9,74.6  L245.1,418l10.9,11l10.9-11l148.3-149.8c21-20.3,32.8-47.9,32.8-77.5C448,131.3,399.9,83,340.8,83L340.8,83z"/></svg>
               <h3 class="sub-head">Certified Engineers</h3>
-              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
+              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
             <div class="benefits">
               <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M340.8,83C307,83,276,98.8,256,124.8c-20-26-51-41.8-84.8-41.8C112.1,83,64,131.3,64,190.7c0,27.9,10.6,54.4,29.9,74.6  L245.1,418l10.9,11l10.9-11l148.3-149.8c21-20.3,32.8-47.9,32.8-77.5C448,131.3,399.9,83,340.8,83L340.8,83z"/></svg>
               <h3 class="sub-head">Certified Engineers</h3>
-              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
+              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
             <div class="benefits">
               <svg height="48" viewBox="0 0 48 48" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h48v48h-48z" fill="none"/><path d="M38.71 20.07c-1.36-6.88-7.43-12.07-14.71-12.07-2.95 0-5.7.87-8.02 2.34l2.92 2.92c1.53-.79 3.26-1.26 5.1-1.26 6.08 0 11 4.92 11 11v1h3c3.31 0 6 2.69 6 6 0 2.27-1.27 4.22-3.13 5.24l2.9 2.9c2.55-1.81 4.23-4.77 4.23-8.14 0-5.28-4.11-9.56-9.29-9.93zm-32.71-9.52l5.5 5.48c-6.38.27-11.5 5.52-11.5 11.97 0 6.63 5.37 12 12 12h23.45l4 4 2.55-2.54-33.45-33.46-2.55 2.55zm9.45 9.45l16 16h-19.45c-4.42 0-8-3.58-8-8s3.58-8 8-8h3.45z"/></svg>
               <h3 class="sub-head">Certified Engineers</h3>
-              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
+              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
             <div class="benefits">
-              <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 7h4v4H7zm0 6h4v4H7zm6-6h4v4h-4zm0 6h4v4h-4z"/></svg>
+              <svg style="fill: none; stroke: #ebb204;" viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><path  d="M7 7h4v4H7zm0 6h4v4H7zm6-6h4v4h-4zm0 6h4v4h-4z"/></svg>
               <h3 class="sub-head">Certified Engineers</h3>
-              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
+              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ex.</p>
             </div>
           </div>
         </div>
@@ -369,13 +370,13 @@
     <section class="section project-section">
       <div class="container container-new">
         <div class="row align-items-center">
-          <div class="col-xl-10">
-            <div class="section-header">
+          <div class="col-xl-10 col-lg-10 col-md-10">
+            <div class="section-header section-header-md">
               <span class="title-head">our portfolio</span>
               <h2 class="heading">Ongoing Project</h2>
             </div>
           </div>
-          <div class="col-xl-2">
+          <div class="col-xl-2 col-lg-2 col-md-2">
             <div class="btn-box">
               <a href="#" class="btn btn-black">
                 <i class="fas mr-1 fa-arrow-right"></i>
@@ -477,14 +478,14 @@
     <!--------Team-section----------->
     <section class="team-section section">
       <div class="container container-new">
-        <div class="content">
+        <div class="section-header-md section-header section-header-lg">
           <span class="title-head">our Experts</span>
           <h2 class="heading">Meet Our Team</h2>
           <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum commodi nisi ipsum. Rem, reprehenderit assumenda Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolores.</p>
         </div>
         <div class="row">
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-            <div class="mx-2 whole-image">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pr-md-0 pr-sm-0 pr-lg-2 pr-xl-2">
+            <div class="mx-xl-2 mx-lg-0 whole-image">
               <div class="image">
                 <img src="image/Jpg/mem1.jpg" alt="">
               </div>
@@ -496,8 +497,8 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-            <div class="mx-2 whole-image">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pl-md-0 pl-sm-0 px-lg-2 px-xl-2">
+            <div class="mx-xl-2 mx-lg-0 whole-image">
             <div class="image">
               <img src="image/Jpg/mem2.jpg" alt="">
             </div>
@@ -509,8 +510,8 @@
             </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-            <div class="mx-2 whole-image">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pr-md-0 pr-sm-0 px-lg-2 px-xl-2">
+            <div class="mx-xl-2 mx-lg-0 whole-image">
             <div class="image">
               <img src="image/Jpg/mem3.jpg" alt="">
             </div>
@@ -522,8 +523,8 @@
             </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-            <div class="mx-2 whole-image">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pl-md-0 pl-sm-0 pl-lg-2 pl-xl-2">
+            <div class="mx-xl-2 mx-lg-0 whole-image">
             <div class="image">
               <img src="image/Jpg/mem4.jpg" alt="">
             </div>
@@ -544,7 +545,7 @@
       <div class="container container-new">
         <div class="row">
           <div class="col-xl-4 col-lg-4">
-            <div class="content">
+            <div class="section-header section-header-lg section-header-md">
               <span class="title-head">Our testimonial</span>
               <h2 class="heading">We're Serving Because of You</h2>
             </div>
@@ -698,7 +699,7 @@
       <div class="container container-new">
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-12">
-            <div class="content">
+            <div class="section-header section-header-md">
               <span class="title-head">news & artiles</span>  
               <h2 class="heading">Construction Blogs</h2>
             </div>
@@ -709,19 +710,19 @@
                 <h3 class="sub-head">Smart factories and industry 4.0 are the future</h3>
                 <span class="sub-title">Monday, 17 August 2020 17.54</span>
                 <p class="para">The first Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, cumque.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-4 col-sm-8 mx-sm-auto col-10 mx-auto mb-3 ">
                 <h3 class="sub-head">Smart factories and industry 4.0 are the future</h3>
                 <span class="sub-title">Monday, 17 August 2020 17.54</span>
                 <p class="para">The first Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, cumque.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-4 col-sm-8 mx-sm-auto col-10 mx-auto mb-3 ">
                 <h3 class="sub-head">Smart factories and industry 4.0 are the future</h3>
                 <span class="sub-title">Monday, 17 August 2020 17.54</span>
                 <p class="para">The first Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, cumque.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
             </div>
           </div>
