--- a/pages.html
+++ b/pages.html
@@ -276,7 +276,7 @@
     <section class="article-section section">
       <div class="container container-new">
         <div class="row">
-          <div class="col-xl-9 col-lg-9">
+          <div class="col-xl-9 col-lg-9 col-md-8">
             <article>
               <div class="image">
                 <img src="image/Jpg/smaple-1.jpg" alt="">
@@ -289,7 +289,7 @@
               </div>
             </article>
           </div>
-          <div class="col-xl-3 col-lg-3">
+          <div class="col-xl-3 col-lg-3 col-md-4">
             <div class="row mb-4">
               <div class="col-xl-4">
                 <div class="small-image">
@@ -346,7 +346,7 @@
                 <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
           </div>
@@ -362,7 +362,7 @@
                 <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
           </div>
@@ -378,7 +378,7 @@
                 <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
-                <a href="#" class="btn read-more">Read more</a>
+                <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
           </div>
