--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!--------heroHeader-section----------->
-    <header class="hero-section bg-image">
+    <header class="contact-hero-section bg-header">
       <div class="bg-panel" id="navScroll">
         <div class="container container-new">
           <nav class="navbar navigation navbar-expand-xl align-item-center">
@@ -262,15 +262,17 @@
             </div>
           </div>
       </div>
-    <div class="about-hero">
-        <div class="about-head">
-            <h1 class="her-head">Contact Us</h1>
-            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsam possimus facilis ratione explicabo fugiat quibusdam quia ipsum.</p>
-        </div>
-    </div>    
+      <div class="container container-new">  
+        <div class="about-hero">
+            <div class="about-head pb-5">
+                <h1 class="her-head">Contact Us</h1>
+                <p class="para para-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsam possimus facilis ratione explicabo fugiat quibusdam quia ipsum.</p>
+            </div>
+        </div>    
+      </div>
     </header>
     <!---------Contact-section----------->
-    <section class="located-section">
+    <section class="located-section section">
         <div class="container container-new">
             <div class="row">
                 <div class="col-xl-6">
@@ -278,42 +280,66 @@
                         <div class="flex-box">
                             <ul>
                                 <li>
-                                    <div class="icon">
-                                        <i class="fas fa-map-marker-alt"></i>
+                                  <div class="row">
+                                    <div class="col-xl-2">
+                                      <div class="icon">
+                                          <i class="fas fa-map-marker-alt"></i>
+                                      </div>
                                     </div>
-                                    <div class="detail">
-                                        <span class="title">address</span>
-                                        <a href="#">
-                                        Pabrick Factory.Ltd Jalan Tuaku Abdul Rahman 50100 Kuala Lumpur, Malaysia
-                                        </a>
+                                    <div class="col-xl-10">
+                                      <div class="detail">
+                                          <span class="title d-block">address</span>
+                                          <a href="#">
+                                            Pabrick Factory.Ltd Jalan Tuaku Abdul Rahman 50100 Kuala Lumpur, Malaysia
+                                          </a>
+                                      </div>
                                     </div>
+                                  </div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone-square"></i>
-                                    <div>
-                                    <div class="detail">
-                                        <span>Telp.</span>
-                                        <a href="#">+61 8790 1703</a>
+                                  <div class="row">
+                                    <div class="col-xl-2">
+                                      <div class="icon sub-head">
+                                          <i class="fas fa-phone-square"></i>
+                                      </div>
                                     </div>
+                                    <div class="col-xl-10">
+                                      <div class="detail">
+                                          <span class="d-block title">Fax.</span>
+                                          <a href="#" class="heading">+61 8790 1703</a>
+                                      </div>
+                                    </div>
+                                  </div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <i class="fas fa-fax"></i>
+                                  <div class="row">
+                                    <div class="col-xl-2">
+                                      <div class="icon sub-head">
+                                          <i class="fas fa-fax"></i>
+                                      </div>
                                     </div>
-                                    <div class="detail">
-                                        <span>Fax.</span>
-                                        <a href="#">+61 8790 1703</a>
+                                    <div class="col-xl-10">
+                                      <div class="detail">
+                                          <span class="d-block title">Fax.</span>
+                                          <a href="#" class="heading">+61 8790 1703</a>
+                                      </div>
                                     </div>
+                                  </div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <i class="fas fa-external-link-alt"></i>
+                                  <div class="row">
+                                    <div class="col-xl-2">
+                                      <div class="icon sub-head">
+                                          <i class="fas fa-external-link-alt"></i>
+                                      </div>
                                     </div>
-                                    <div class="detail">
-                                        <span class="title">address</span>
-                                        <a href="#">https://www.takang.com</a>
+                                    <div class="col-xl-10">
+                                      <div class="detail">
+                                          <span class="title d-block">address</span>
+                                          <a href="#">https://www.takang.com</a>
+                                      </div>
                                     </div>
+                                  </div>
                                 </li>
                             </ul>
                         </div>
@@ -327,25 +353,25 @@
             </div>
         </div>
     </section>
-    <section class="contact-form">
+    <section class="contact-form section">
         <div class="container container-new">
             <span class="title"><sup>*</sup>Required Field</span>
             <form action="">
                 <div class="form-group">
-                    <label for="">Name <sup>*</sup></label>
-                    <input type="text" class="form-control">
+                    <label for="" class="title">Name <sup>*</sup></label>
+                    <input type="text" class="form-control form-control-lg">
                 </div>
                 <div class="form-group">
-                    <label for="">Email <sup>*</sup></label>
-                    <input type="email" class="form-control">
+                    <label for="" class="title">Email <sup>*</sup></label>
+                    <input type="email" class="form-control form-control-lg">
                 </div>
                 <div class="form-group">
-                    <label for=""> Subject <sup>*</sup></label>
-                    <input type="text" class="form-control">
+                    <label for="" class="title"> Subject <sup>*</sup></label>
+                    <input type="text" class="form-control form-control-lg">
                 </div>
                 <div class="form-group">
-                    <label for="">Message <sup>*</sup></label>
-                    <textarea class="form-control" name="" id="" cols="30" rows="10"></textarea>
+                    <label for="" class="title">Message <sup>*</sup></label>
+                    <textarea class="form-control form-control-lg" name="" id=""></textarea>
                 </div>
                 <div class="btn-box">
                     <button class="all-btn btn" type="submit">send email</button>
