--- a/service.html
+++ b/service.html
@@ -331,7 +331,7 @@
           <div class="col-xl-6 col-lg-6">
             <div class="content">
               <span class="title-head">why choose us</span>
-              <h2 class="hero-head">Through Years We Offer best Service & Solutions</h2>
+              <h2 class="heading">Through Years We Offer best Service & Solutions</h2>
             </div>
           </div>
           <div class="col-xl-6 col-lg-6">
@@ -491,7 +491,7 @@
         </div>
         <div class="content">
           <div class="span title-head">got a project</div>
-          <h2 class="hero-head">Ready to Simplify Your Next Contruction Porject with Us?</h2>
+          <h2 class="heading">Ready to Simplify Your Next Contruction Porject with Us?</h2>
           <a href="#" class="btn all-btn">
             <i class="fas fa-envelope"></i>
             <span>contact us</span>
